# langgraph-multi-agent-patterns

./: .gitignore  README.md  REPORT.md  pyproject.toml
examples/: demo.py  test_strategy3.py  test_strategy3_hitl.py  test_supervisor.py  test_supervisor_v2.py  test_supervisor_v3.py
outputs/: test_supervisor_v2_result.txt
src/confidence_voting/: __init__.py  agents.py  aggregator.py  graph.py  state.py
src/self_correction_writing/: __init__.py  vector_memory.py
src/self_correction_writing/strategy3_reflexion/: __init__.py  agents.py  graph.py  state.py
src/supervisor/: __init__.py  agents.py  graph.py  state.py
src/supervisor_v2/: __init__.py  agents.py  graph.py  state.py
src/supervisor_v3/: __init__.py  agents.py  compress.py  graph.py  state.py
