[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "langgraph-multi-agent-patterns"
version = "0.2.0"
description = "Multi-agent pattern implementations with LangGraph: voting, self-correction, supervisor, orchestrator"
requires-python = ">=3.10"
dependencies = [
    "langgraph>=0.2",
    "langchain-aws>=0.2",
    "langchain-community>=0.3.0",
    "pydantic>=2.0",
    "chromadb>=0.5.0",
    "ddgs>=9.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]
